Fixed Bug #44212 (array_diff_assoc not reporting missing arguments)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@253538 c90b9560-bf6c-de11-be94-00142212c4b1